adicionado o ion-chip para definir o genero da serie na pagina home

--- a/appComponentes/src/app/home/home.page.html
+++ b/appComponentes/src/app/home/home.page.html
@@ -19,5 +19,11 @@
       </div>
       {{ serie.texto }}
     </ion-card-content>
+      <ion-item>
+        <ion-chip outline color="danger">
+          <ion-label>{{ serie.genero }}</ion-label>
+        </ion-chip>
+      </ion-item>
   </ion-card>
 </ion-content>
+
