--- a/appComponentes/src/app/detalhes/detalhes.page.html
+++ b/appComponentes/src/app/detalhes/detalhes.page.html
@@ -6,4 +6,26 @@
 
 <ion-content>
 
+  <ion-content fullscreen class="ion-padding">
+    <ion-fab horizontal="end" vertical="midle" slot="fixed" edge>
+      <ion-fab-button>
+        <ion-icon name="add"></ion-icon>
+      </ion-fab-button>
+      <ion-fab-list>
+        <ion-fab-button color="light">
+          <ion-icon name="logo-facebook"></ion-icon>
+        </ion-fab-button>
+        <ion-fab-button color="light">
+          <ion-icon name="logo-twitter"></ion-icon>
+        </ion-fab-button>
+        <ion-fab-button color="light">
+          <ion-icon name="logo-vimeo"></ion-icon>
+        </ion-fab-button>
+      </ion-fab-list>
+    </ion-fab>
+  
+
+
+<ion-content>
+
 </ion-content>
