--- a/appComponentes/src/app/detalhes/detalhes.page.html
+++ b/appComponentes/src/app/detalhes/detalhes.page.html
@@ -13,13 +13,13 @@
       </ion-fab-button>
       <ion-fab-list>
         <ion-fab-button color="light">
-          <ion-icon name="logo-facebook"></ion-icon>
+          <ion-icon name="arrow-redo-outline"></ion-icon>
         </ion-fab-button>
         <ion-fab-button color="light">
-          <ion-icon name="logo-twitter"></ion-icon>
+          <ion-icon name="bookmark-outline"></ion-icon>
         </ion-fab-button>
         <ion-fab-button color="light">
-          <ion-icon name="logo-vimeo"></ion-icon>
+          <ion-icon name="alert-circle-outline"></ion-icon>
         </ion-fab-button>
       </ion-fab-list>
     </ion-fab>
