comecado a adicao do menu geral

--- a/appComponentes/src/app/detalhes/detalhes.page.html
+++ b/appComponentes/src/app/detalhes/detalhes.page.html
@@ -1,14 +1,21 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>detalhes</ion-title>
+    <ion-title>
+      detalhes
+    </ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
+
+
 
 <ion-content>
 
   <ion-content fullscreen class="ion-padding">
     <ion-fab horizontal="end" vertical="midle" slot="fixed" edge>
-      <ion-fab-button>
+      <ion-fab-button color="danger">
         <ion-icon name="add"></ion-icon>
       </ion-fab-button>
       <ion-fab-list>
