--- a/appComponentes/src/app/home/home.page.html
+++ b/appComponentes/src/app/home/home.page.html
@@ -3,6 +3,9 @@
     <ion-title>
       {{ titulo }}
     </ion-title>
+    <ion-buttons slot="start">
+      <ion-menu-button menu="main-menu"></ion-menu-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
