--- a/appComponentes/src/app/app.component.html
+++ b/appComponentes/src/app/app.component.html
@@ -5,13 +5,25 @@
       <div class="header-content">
       </div>
       <ion-list>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
-        <ion-item>Menu Item</ion-item>
+        <ion-item>
+          <ion-icon name="bookmarks-outline" slot="start"></ion-icon>
+          <ion-label>Salvos</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="download-outline" slot="start"></ion-icon>
+          <ion-label>Meus downloads</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="compass-outline" slot="start"></ion-icon>
+          <ion-label>Gênero</ion-label>
+        </ion-item>
+        <ion-item>
+          <ion-icon name="settings-outline" slot="start"></ion-icon>
+          <ion-label>Configurações</ion-label>
+        </ion-item>
         </ion-list>
     </ion-content>
   </ion-menu>
+  
   <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
