--- a/appComponentes/src/app/detalhes/detalhes.page.html
+++ b/appComponentes/src/app/detalhes/detalhes.page.html
@@ -20,7 +20,7 @@
       </ion-fab-button>
       <ion-fab-list>
         <ion-fab-button color="light">
-          <ion-icon name="arrow-redo-outline"></ion-icon>
+          <ion-icon name="share-social-outline"></ion-icon>
         </ion-fab-button>
         <ion-fab-button color="light">
           <ion-icon name="bookmark-outline"></ion-icon>
