--- a/appComponentes/src/app/detalhes/detalhes.page.html
+++ b/appComponentes/src/app/detalhes/detalhes.page.html
@@ -32,7 +32,13 @@
     </ion-fab>
   
 
+    <ion-content fullscream="true">
+      <ion-card *ngFor="let detalhe of detalhes">
+        <ion-card-header>
+          <ion-card-title>{{ serie.titulo }}</ion-card-title>
+          <ion-card-subtitle>{{ serie.subtitulo }}</ion-card-subtitle>
+        </ion-card-header>
+      </ion-card>
+    
+    </ion-content>
 
-<ion-content>
-
-</ion-content>
